# Nmap Changelog ($Id$); -*-text-*-

o [Zenmap] Added a workaround for a Ubuntu Python packaging idiosyncrasy.
  As of version python2.6-2.6.4-0ubuntu3, Ubuntu's distutils modifies
  self.prefix, a variable we use in the setup.py script. This would
  cause Zenmap to look in the wrong place for its configuration files,
  and show the dialog "Error creating the per-user configuration
  directory" with the specific error "[Errno 2] No such file or
  directory: '/usr/share/zenmap/config'". This problem was reported by
  Chris Clements, who also helped debug. [David]

o Added better match lines for MIT Kerberos from Matt Selsky.

o [NSE] Added 5 new NSE scripts and a library for use with MySQL. 
  * mysql-brute uses the unpwdb library to guess credentials for MySQL
  * mysql-databases queries MySQL for a list of databases
  * mysql-empty-password attempts to authenticate anonymously or as root with
    an empty password 
  * mysql-users queries MySQL for a list of database users
  * mysql-variables queries MySQL for it's variables and their settings

o [NSE] Added the new daap-get-library script which uses the Digital Audio
  Access Protocol to enumerate the contents of a library. The contents
  contain the name of the artist, album and song.

o [Ndiff] Show a nicer error message when an input file can't be
  loaded. Suggested by Derril Lucci, who also contributed a patch.

o Added a function that was missing from http-favicon.nse. Its absence
  would cause the error
    http-favicon.nse:141: variable 'dirname' is not declared
  when a web page specified an relative icon URL through the link
  element. This bug was reported by Ron Meldau. [David]

o Fixed an error that occurred when UDP scan was combined with version
  scan. UDP ports would appear in the state "unknown" at the end of
  the scan, and in some cases an assertion failure would be raised.
  This was an unintended side effect of the memory use reduction